# marketdata

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml   .pre-commit-config.yaml  Makefile  Procfile  README.md  pyproject.toml  requirements.txt
marketdata_bot/: bot.py  core.py
marketdata_bot/commands/: get_candles.py  help.py  start.py
marketdata_bot/config/: .env.template
marketdata_bot/def_func/: numb_of_candles.py
marketdata_bot/services/: stock_candles.py
marketdata_bot/test/: test_pytest_numb_candles.py
marketdata_bot/utils/: constants.py
tests/: test_stock_candles.py
