[tool.poetry]
name = "stockmarketdata"
version = "0.1.0"
description = "With this bot, you can access realtime market data from stock exchanges"
authors = ["Nikolaienko Stanislav lettersforstanisalv@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.22.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

