[tool.poetry]
name = "stockmarketdata"
version = "0.1.0"
description = "With this bot, you can access realtime market data from stock exchanges"
authors = ["Nikolaienko Stanislav lettersforstanisalv@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.22.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[tool.black]
# https://github.com/psf/black
target-version = ["py310"]
line-length = 88
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 310
line_length = 88
known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
